[gd_scene load_steps=2 format=3 uid="uid://em80pg5lxikh"]

[ext_resource type="Script" path="res://controllers/scripts/menu.gd" id="1_1bkii"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1bkii")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Singleplayer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Developer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Developer"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
